manifests/todo-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: todo-ui
  name: todo-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-ui
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: todo-ui
    spec:
      containers:
      - image: harik8/todo-ui:v1.0.2
        name: todo-ui
        resources:
          requests:
            memory: 256Mi
            cpu: 200m
          limits:
            memory: 512Mi
            cpu: 400m
status: {}
