manifests/todo-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-ui
  namespace: todo
  labels:
    app: todo-ui
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    app: todo-ui
